@@ -16,6 +16,7 @@
 12. Make http and https links within comments clickable in MAI view.
 13. Limit works advanced search to discovered albums.
 14. Ensure only 1 'serverstatus' at a time.
+15. Use simpler custom API to poll scan progress to reduce load on LMS.
 
 5.7.6
 -----
